# openglGo

./: .gitignore  CMakeLists.txt  imgui.ini  main.cpp  oldmain.txt  openglGo
assets/shaders/: BasicFragment.fs.glsl  BasicVertex.vs.vert  ShaderLight.frag  ShaderLight.vert  fragTest.glsl  singleTextureFrag.glsl  vertTest.glsl
assets/shaders/light/: LightShaderFrag.glsl  LightShaderVert.glsl  OpticalObjectFrag.glsl  OpticalObjectVert.glsl
classes/: Camera.cpp  Camera.h  GEInstance.cpp  GEInstance.h  GEObject.h  GERenderableObject.cpp  GERenderableObject.h  GLInstance.cpp  GLInstance.h  GLMemoryObject.h  GLObject.cpp  GLObject.h  IndexBuffer.cpp  IndexBuffer.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Uniform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexMemoryLayout.cpp  VertexMemoryLayout.h
classes/GraphicEngine/Properties/: OpenGLDetails.h  Textures.h
classes/Objects/: GLCube.cpp  GLCube.h
classes/gui/: ImguiRenderer.cpp  ImguiRenderer.h
glad/include/glad/: glad.h
glad/src/: glad.c
headers/: glhelper.h
libraries/glm/: CMakeLists.txt
libraries/glm/detail/: func_common.inl  setup.hpp  type_quat.hpp  type_quat.inl
libraries/glm/ext/: matrix_clip_space.hpp  matrix_relational.inl  quaternion_common.hpp  quaternion_exponential.hpp  quaternion_geometric.hpp  scalar_common.hpp  scalar_constants.hpp  scalar_int_sized.hpp  scalar_relational.inl  scalar_ulp.hpp  scalar_ulp.inl  vector_common.hpp  vector_common.inl  vector_double1.hpp  vector_int1_precision.hpp  vector_int2_precision.hpp  vector_int3_precision.hpp  vector_int4_precision.hpp  vector_relational.hpp  vector_uint1_precision.hpp  vector_uint2_precision.hpp  vector_uint3_precision.hpp  vector_uint4_precision.hpp
libraries/glm/gtc/: integer.hpp  matrix_integer.hpp  quaternion.hpp  quaternion.inl  random.inl  round.hpp  round.inl  type_aligned.hpp  type_precision.hpp  type_ptr.hpp  ulp.hpp  vec1.hpp
libraries/glm/gtx/: associated_min_max.hpp  bit.hpp  closest_point.hpp  color_encoding.hpp  color_space.hpp  color_space_YCoCg.hpp  common.hpp  compatibility.hpp  component_wise.hpp  dual_quaternion.hpp  easing.hpp  euler_angles.hpp  extend.hpp  extended_min_max.hpp  exterior_product.hpp  fast_exponential.hpp  fast_square_root.hpp  fast_trigonometry.hpp  functions.hpp  gradient_paint.hpp  handed_coordinate_space.hpp  hash.hpp  integer.hpp  intersect.hpp  io.hpp  io.inl  log_base.hpp  matrix_cross_product.hpp  matrix_decompose.hpp  matrix_decompose.inl  matrix_factorisation.hpp  matrix_interpolation.hpp  matrix_major_storage.hpp  matrix_operation.hpp  matrix_query.hpp  matrix_transform_2d.hpp  mixed_product.hpp  norm.hpp  norm.inl  normal.hpp  (+24 more)
src/GraphicEngine/Properties/: Camera.h  OpenGLDetails.h  Textures.h  Transformation.h
src/GraphicEngine/classes/: CameraObject.cpp  CameraObject.h  GEInstance.cpp  GEInstance.h  GERenderableObject.cpp  GERenderableObject.h  GERenderer.cpp  GERenderer.h  Hashable.cpp  Hashable.h  KeyboardCamera.cpp  KeyboardCamera.h  Material.cpp  Material.h  MouseCamera.cpp  MouseCamera.h
src/GraphicEngine/gui/: ImguiRenderer.cpp  ImguiRenderer.h
src/GraphicEngine/utils/: GLCube.cpp  GLCube.h  utils.h
src/MyGame/Block/: AirBlock.cpp  AirBlock.h  Block.h  IWorldBlock.h  WorldBlock.h
src/MyGame/utils/: defination.h
src/MyGame/world/: Chunk.h  World.cpp  World.h
src/OpenGL/: BindableObject.h  IndexBuffer.cpp  IndexBuffer.h  Program.cpp  Program.h  Renderer.cpp  Shader.cpp  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Uniform.cpp  Uniform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexMemoryLayout.cpp  VertexMemoryLayout.h
